# investment-analyst

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: aapl_complete_snapshot.md  aapl_workspace_bootstrap.md  alpaca_history.md  application_facade.md  application_runtime.md  architecture.md  asset_catalog.md  cazatiburones.md  coinbase_history.md  consolidated_diagnostic_query.md  continuous_integration.md  data_contracts.md  dependency_management.md  development.md  fundamental_research_foundation.md  historical_research_data.md  local_interface.md  market_diagnostic.md  market_statistics.md  operational_runner.md  professional_analysis_interface.md  provider_asset_resolution.md  sec_edgar_foundation.md  sec_fundamental_diagnostic.md  sec_fundamental_metrics.md  sec_fundamental_observations.md  sec_fundamental_point_in_time.md  simulated_pipeline.md  storage.md  unified_market_history.md  workspaces.md
scripts/: bootstrap_aapl_workspace.py  bootstrap_project.sh  check.sh  compute_market_diagnostic.py  compute_market_statistics.py  compute_sec_aapl_fundamental_diagnostic.py  compute_sec_aapl_fundamental_metrics.py  fetch_alpaca_history.py  fetch_coinbase_history.py  fetch_sec_aapl_fundamentals.py  init_workspace.py  inspect_workspace.py  install_local_service.py  list_assets.py  normalize_sec_aapl_fundamentals.py  query_aapl_diagnostics.py  query_aapl_fundamental_research.py  query_market_history.py  query_sec_aapl_fundamentals.py  resolve_asset.py  run_aapl_complete_snapshot.py  run_aapl_daily.py  run_simulated_pipeline.py  serve_investment_analyst.py
src/investment_analyst/: __init__.py  time_intervals.py
src/investment_analyst/analytics/: aapl_daily_report_formatter.py  aapl_daily_report_models.py  aapl_daily_report_service.py  aapl_snapshot_models.py  aapl_snapshot_pipeline.py  (+4 more)
tests/unit/: test_package.py
(+202 files in other folders)
