[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-analyst"
version = "0.1.0"
description = "Herramienta personal de análisis de inversiones (solo análisis, sin ejecución de órdenes)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
dependencies = [
    "duckdb>=1.5,<2",
    "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
    "pip-audit>=2.10,<3",
    "pytest>=8",
    "pytest-cov>=7.1,<8",
    "ruff>=0.6",
    "setuptools==83.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
patch = ["subprocess"]
source = ["investment_analyst"]

[tool.coverage.report]
fail_under = 82.0
precision = 2
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
